--- a/package.json
+++ b/package.json
@@ -27,9 +27,13 @@
     "eslint-config-next": "14.0.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "husky": "^8.0.3",
     "jsdom": "^23.0.1",
     "sass": "^1.69.5",
     "typescript": "^5",
     "vitest": "^1.0.1"
+  },
+  "lint-staged": {
+    "*.{ts,tsx, js, jsx, scss}": "eslint --cache --fix"
   }
 }
