--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "graphql_app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,6 +13,7 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
