--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "firebase": "^10.7.1",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
