--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "classnames": "^2.3.2",
     "firebase": "^10.7.1",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@testing-library/react": "^14.1.2",
