--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@vitest/coverage-v8": "^1.0.4",
     "classnames": "^2.3.2",
     "firebase": "^10.7.1",
     "next": "14.0.3",
