--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.3",
     "jsdom": "^23.0.1",
+    "msw": "^2.0.11",
     "sass": "^1.69.5",
     "typescript": "^5",
     "vitest": "^1.0.1"
