--- a/package.json
+++ b/package.json
@@ -40,6 +40,6 @@
     "vitest": "^1.0.1"
   },
   "lint-staged": {
-    "*.{ts,tsx, js, jsx, scss}": "eslint --cache --fix, npx prettier --write ."
+    "*.{ts,tsx, js, jsx, scss}": ["eslint --cache --fix", "npx prettier --write ."]
   }
 }
