--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "vitest": "^1.0.1"
   },
   "lint-staged": {
-    "*.{ts,tsx, js, jsx, scss}": "eslint --cache --fix"
+    "*.{ts,tsx, js, jsx, scss}": "eslint --cache --fix",
+    "*.{ts,tsx, js, jsx, scss, css}": "npx prettier --write ."
   }
 }
