--- a/package.json
+++ b/package.json
@@ -40,6 +40,6 @@
     "vitest": "^1.0.1"
   },
   "lint-staged": {
-    "*.{ts,tsx, js, jsx, scss, css}": "prettier --write"
+    "*.{ts,tsx, js, jsx, scss, css}": "npx prettier --write ."
   }
 }
